# llvm-project

llvm/lib/Transforms/: CMakeLists.txt
llvm/lib/Transforms/IDP/: CMakeLists.txt  IDP.cpp  IDP.h
llvm/tools/clang/tools/: CMakeLists.txt
llvm/tools/clang/tools/decl-scope/: CMakeLists.txt  decl-scope_main.cpp
